deployments/v2.1/instructions.md
IMPORTANT! Make sure you're on commit [`6b4cf150`](https://github.com/relayprotocol/relay-periphery/tree/6b4cf150)!

There is a single deployment script that needs to be triggered for every new chain, `./script/RouterAndApprovalProxyV2_1Deployer.s.sol` or `./script/RouterAndApprovalProxyV2_1Deployer_NonTstore.s.sol` (depending on the EVM version supported by the chain)

Both scripts require the following environment variables:

- `DEPLOYER_PK`: the private key of the deployer wallet
- `CHAIN`: the chain to deploy on (the available options can be found in `./foundry.toml`)
- `CREATE2_FACTORY`: the addres of the `CREATE2` factory to be used for deterministic deployments - the default factory should be deployed at `0x4e59b44847b379578588920ca78fbf26c0b4956c`, in case it's not available on a given chain we should deploy it there or otherwise use a different factory
- `PERMIT2`: the address of the `PERMIT2` contract to use for `ApprovalProxy` - the default permit2 should be deployed at `0x000000000022d473030f116ddee9f6b43ac78ba3`, in case it's not available on a given chain we should deploy it there or otherwise use a different permit2
- `ETHERSCAN_API_KEY`: the API key needed to verify the contracts on Etherscan-powered explorers

### Deployment

The deployment can be triggered via the following command:

```bash
forge script ./script/RouterAndApprovalProxyV2_1Deployer.s.sol:RouterAndApprovalProxyV2_1Deployer \
    --slow \
    --multi \
    --broadcast \
    --verify \
    --private-key $DEPLOYER_PK \
    --create2-deployer $CREATE2_FACTORY
```

Do not forget to add the corresponding deployment information to the `./addresses.json` file! Also, please ensure all deployed contracts are verified!

### Verification

The above script should do the deployment and verification altogether. However, in cases when the verification failed for some reason, it can be triggered individually via the following commands:

```bash
# RelayRouter
forge verify-contract --chain $CHAIN $RELAY_ROUTER ./src/v2.1/RelayRouterV2_1.sol:RelayRouterV2_1

# RelayApprovalProxy
forge verify-contract --chain $CHAIN $RELAY_APPROVAL_PROXY ./src/v2.1/RelayApprovalProxyV2_1.sol:RelayApprovalProxyV2_1 --constructor-args $(cast abi-encode "constructor(address, address, address)" $DEPLOYER_ADDRESS $RELAY_ROUTER $PERMIT2)
```

In case `forge` doesn't have any default explorer for a given chain, make sure to pass the following extra arguments to the `forge verify-contract` commands: `--verifier-url $VERIFIER_URL --etherscan-api-key $VERIFIER_API_KEY`.

### Legacy EVM versions deployment

Some chains do not support the default EVM version used by the contracts (Cancun). In that case, we default to compiling using the London EVM version. Since that version does not support features like transient storage, we need to use the `_NonTstore` version of the `RelayRouterV2_1`. This implies two things:

- use the `RouterAndApprovalProxyV2_1_NonTstoreDeployer` script
- adjust the `forge script` command by passing `--contracts src/v2.1/Relay*` (this will result in `forge` skipping compilation for some files that use unsupported features)
